--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,16 @@
   "description": "ToDoList app",
   "main": "app/server.js",
   "dependencies": {
-    "express": ">= 1.2.0"
+    "express": ">= 1.2.0",
+    "request": "^2.61.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "author": "Carlos Sepulveda",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "mocha": "^2.2.5"
+  }
 }
